--- a/index.qmd
+++ b/index.qmd
@@ -2,10 +2,6 @@
 title: "ISSS608-VAA"
 ---
 
-This is a Quarto website.
+**Welcome to my site!**
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
-
-```{r}
-1 + 1
-```
+This is the homepage!
