Commit after changes on Hands-on Ex01

--- a/Hands-on_exercise/Hands-on_EX01/Hands-on_EX01.qmd
+++ b/Hands-on_exercise/Hands-on_EX01/Hands-on_EX01.qmd
@@ -1,6 +1,7 @@
 ---
 title: "Hands-on Exercise 1"
 author: "Law Shiang Rou"
+date: "`r Sys.Date()`"
 ---
 
 # **Getting Started**
@@ -9,6 +10,15 @@ author: "Law Shiang Rou"
 
 The code chunk below uses p_load() of pacman package to check if tidyverse packages have been installed.
 
+
+The code chunk below will import the library one by one
+```{r}
+library(readr)
+library(dplyr)
+library(tidyr)
+```
+
+Alternatively, we can load all using p_load, this is more effective:
 ```{r}
 pacman::p_load(tidyverse)
 ```
