--- a/Take_Home_Exercise/Take_Home_Exercise_1/Take_Home_Exercise_1.qmd
+++ b/Take_Home_Exercise/Take_Home_Exercise_1/Take_Home_Exercise_1.qmd
@@ -1,6 +1,7 @@
 ---
 title: "Take Home Exercise 1"
 author: "Law Shiang Rou"
+date: "`r Sys.Date()`"
 ---
 
 ## **1. Overview**
@@ -13,7 +14,7 @@ The dataset used, [*Singapore Residents by Planning Area / Subzone, Age Group, S
 
 ![Figure above shows csv file on SingStats website](images/image-1140628652.png)
 
-Additional information on regions and maturity of the planning areas were referenced from [Wikipedia](https://en.wikipedia.org/wiki/Planning_Areas_of_Singapore) and [PropertyGuru Singapore](https://www.propertyguru.com.sg/property-guides/non-mature-vs-mature-bto-55760) to provide more insights to the readers. The consolidated Excel file can be retrieved from [**Github**]{.underline}.
+Additional information on regions and maturity of the planning areas were referenced from [Wikipedia](https://en.wikipedia.org/wiki/Planning_Areas_of_Singapore) and [PropertyGuru Singapore](https://www.propertyguru.com.sg/property-guides/non-mature-vs-mature-bto-55760) to provide more insights to the readers. The additional information consolidated can be retrieved from [Github](https://github.com/shiangrou/ISSS608-VAA/blob/master/Take_Home_Exercise/Take_Home_Exercise_1/Estate%20Listing.xlsx).
 
 ## **3. Preparation Steps**
 
@@ -21,35 +22,35 @@ Additional information on regions and maturity of the planning areas were refere
 
 Step | Description | Screenshot  
 |:-:|------------|:------------------:|
-| 1. | **Load the csv file into Tableau.** <br><br> Click "Connect to Data" --\> click "Text file" and select the CSV file to connect to | ![](images/image-763433829.png){width="460"}
-| 2. | **View the Notes.** <br><br> Click on "View data" --\> the view data screen will appear.|![](images/image-761813158.png){width="280"}<br>![](images/image-770310311.png){width="460"} |
-| 3. | **Rename the columns according to the data in Notes.** <br><br> In the viewing panel on the right, click the down arrow button beside each field name --\> select "Rename" and change the name according to table shown in step 2. |![](images/image-794020447.png){width="460"} |
-| 4. | **Save the Tableau file.** <br><br> Click on "Save" button |![](images/image-690970572.png){width="460"} |
-| 5. | **Adding additional information on region and maturity.** <br><br> Click "Add" --\> click "Microsoft Excel" and select the file to add. |![](images/image-144063171.png){width="460"} |
-| 6. | **Build the connection with "Maturity".** <br><br> 1.  Drag "Maturity" to the right until a line is form to connect to the original data.<br><br>2.  Select "Planning Area" = "Planning Area1" |![](images/image-963339825.png){width="460"} |
-| 7. | **Build the connection with "Region".** <br><br> 1.  Drag "Region" to the right until a line is form to connect to the original data.<br><br>2.  Select "Planning Area" = "Planning Area (Region)" |![](images/image-1332630524.png){width="460"} |
+| 1. | **Load the csv file into Tableau.** <br><br> Click "Connect to Data", select "Text file" and choose the CSV file to connect to | ![](images/image-763433829.png){width="430"}
+| 2. | **View the Notes.** <br><br> Click on "View data" beside "Notes" for the view data screen to appear.|![](images/image-761813158.png){width="230"}<br><br>![](images/image-770310311.png){width=100%} |
+| 3. | **Rename the columns according to the data in Notes.** <br><br> In the viewing panel on the right, click the down arrow button beside each field name and select "Rename" to change the name according to table shown in step 2. |![](images/3.1.3.png){width=100%}|
+| 4. | **Save the Tableau file.** <br><br> Click on "Save" button |![](images/image-690970572.png){width=100%} |
+| 5. | **Adding additional information on region and maturity.** <br><br> Click "Add" and select "Microsoft Excel" to choose the file to add. |![](images/image-144063171.png){width=100%} |
+| 6. | **Build the connection with "Maturity".** <br><br> 1.  Drag "Maturity" to the right until a line is form to connect to the original data.<br><br>2.  Select "Planning Area" = "Planning Area1" |![](images/image-963339825.png){width=100%} |
+| 7. | **Build the connection with "Region".** <br><br> 1.  Drag "Region" to the right until a line is form to connect to the original data.<br><br>2.  Select "Planning Area" = "Planning Area (Region)" |![](images/image-1332630524.png){width=100%} |
 
 
-#### [3.2 View the data and select 9 planning areas]{style="color: Navy;"}
+#### [3.2 Select 9 planning areas]{style="color: Navy;"}
 Step | Description | Screenshot  
 |:-:|------------|:------------------:|
-| 1. | **Selecting the 9 planning areas based on highest resident count and when possible, choose 1 mature and 1 non-mature within same region.** <br><br> Click on sheet 1<br>1. Drag "Region" into Columns, drag "Planning Area" and "Maturity" into Rows, then place Resident Count onto the table body.<br><br>2. Sort each region to find out the planning areas with highest resident count.<br><br>**Central** - Bukit Merah *(Mature)*<br>**East** - Bedok *(Mature)*, Tampines *(Mature)*<br>**North** - Woodlands *(Non-mature)*, Yishun *(Non-mature)*<br>**North-East** - Sengkang *(Non-mature)*, Ang Mo Kio *(Mature)*<br>**West** - Jurong West *(Non-mature)*, Clementi *(Mature)*| ![](images/3.2.1.png){width="460"}<br>![](images/3.2.1(east).png){width="460"}<br>![](images/3.2.1(north).png){width="460"}<br>![](images/3.2.1(north-east).png){width="460"}<br>![](images/3.2.1(west).png){width="460"}
-| 2. | **Apply Filter.** <br><br> Drag "Planning Area" into filter, select the 9 planning areas listed in previous step and click "Apply". |![](images/3.2.2.png){width=100%}<br>![](images/3.2.2(1).png){width=100%} |
-| 3. | **Apply Filter to all worksheets.** <br><br> Click on "Planning Area" under filter, select "Apply to Worksheets" --\> "All Using This Data Source". |![](images/3.2.3.png){width=100%}|
+| 1. | **Selecting the 9 planning areas based on highest resident count and when possible, choose 1 mature and 1 non-mature area in each region.** <br><br>1. Click on sheet 1, drag "Region" into Columns and drag "Planning Area" and "Maturity" into Rows, then place "Resident Count" as the table content.<br><br>2. Sort each region to find out the planning areas with highest resident count.<br><br><span style="font-size:14px"><u>The 9 selected planning areas:</u><br> **Central** - Bukit Merah *(Mature)*<br>**East** - Bedok *(Mature)*, Tampines *(Mature)*<br>**North** - Woodlands *(Non-mature)*, Yishun *(Non-mature)*<br>**North-East** - Sengkang *(Non-mature)*, Ang Mo Kio *(Mature)*<br>**West** - Jurong West *(Non-mature)*, Clementi *(Mature)*</span>|![](images/3.2.1.png){width=100%}<br><br>![](images/3.2.1(east).png){width=100%}<br><br>![](images/3.2.1(north).png){width=100%}<br><br>![](images/3.2.1(north-east).png){width=100%}<br><br>![](images/3.2.1(west).png){width=100%}
+| 2. | **Apply filter to dataset.** <br><br> Drag "Planning Area" into filter, select the 9 planning areas listed in previous step and click "Apply". |![](images/3.2.2.png){width="400"}<br><br>![](images/3.2.2(1).png){width=400} |
+| 3. | **Apply filter to all worksheets.** <br><br> Click on "Planning Area" under filter, select "Apply to Worksheets" and "All Using This Data Source". |![](images/3.2.3.png){width="400"}|
 
 #### [3.3 Plotting the charts]{style="color: Navy;"}
 Step | Description | Screenshot  
 |:-:|------------|:------------------:|
-| 1. | **Create calculated field for Female and Male resident count** <br><br> Under Analysis, click "Create Calculated Field"<br>Create a calculated fields - "Female" by keying in the formula shown on the right, then repeat the step and create another calculated fields - "Male".| ![](images/3.3.1.png){width=100%}<br>![](images/3.3.1(1).png){width=100%}<br>![](images/3.3.1(2).png){width=100%}|
-| 2. | **Create the base for age-sex pyramids** <br><br> Drag "Female" and "Male" onto Columns and drag "Age Group" onto Rows.| ![](images/3.3.2.png){width=100%}|
-| 3. | **Create calculated field - Index** <br><br> Under Analysis, click "Create Calculated Field"<br>Create a calculated fields - "Index" by keying in the formula shown on the right.| ![](images/3.3.3.png){width=100%}|
-| 4. | **Create parameter - Number of Columns** <br><br> On Data panel, right click on empty space and select "Create Parameter..."<br><br>On Edit Parameter screen, change the name and key in Current value of 2| ![](images/3.3.4.png){width=100%}<br>![](images/3.3.4(1).png){width=100%}|
-| 5. | **Create calculated field - Columns** <br><br> Under Analysis, click "Create Calculated Field"<br>Create a calculated field - "Columns" by keying in the formula shown on the right.<br><br>Once the calculated field "Columns" is created, right click on it on the Data panel, and select "Convert to Discrete"| ![](images/3.3.5.png){width=100%}<br>![](images/3.3.5(1).png){width=100%}|
-| 6. | **Build trellis display** <br><br> 1. Drag "Columns" to Columns and drag "Region" to Rows<br><br> 2. Drag "Planning Area" to Detail<br><br> 3. Right click on "Planning Area" under Detail and select Compute using "Planning Area"| ![](images/3.3.6.png){width=100%}<br><br>![](images/3.3.6(1).png){width=100%}|
-| 7. | **Edit X-Axis of "Females"** <br><br> 1. Right click "Females" on X-axis and select Edit Axis.<br><br> 2. Select Fixed under range and set Fixed start to 0 and Fixed end to 14000. Check "Reversed" under Scale.<br><br> 3. Navigate to "Tick Marks", set Major Tick Marks to Fixed and set Tick interval to 2000.| ![](images/3.3.7.png){width=100%}<br>![](images/3.3.7(1).png){width=100%}<br><br>![](images/3.3.7(2).png){width=100%}|
-| 8. | **Edit X-Axis of "Males"** <br><br> Right click "Males" on X-axis and select Edit Axis.<br><br> 1. Select Fixed under range and set Fixed start to 0 and Fixed end to 14000. <br><br> 2. Navigate to "Tick Marks", set Major Tick Marks to Fixed and set Tick interval to 2000.| ![](images/3.3.8.png){width=100%}<br>![](images/3.3.8(1).png){width=100%}|
+| 1. | **Create calculated field for female and male resident count** <br><br> Under Analysis, click "Create Calculated Field", create a calculated field - "Female" by keying in the formula shown on the right, then repeat the step and create another calculated field - "Male".| ![](images/3.3.1.png){width=100%}<br><br>![](images/3.3.1(1).png){width=100%}<br><br>![](images/3.3.1(2).png){width=100%}|
+| 2. | **Create the base for age-sex pyramids** <br><br> Drag "Females" and "Males" onto Columns and drag "Age Group" onto Rows.| ![](images/3.3.2.png){width=100%}|
+| 3. | **Create calculated field - Index** <br><br> Under Analysis, click "Create Calculated Field", create a calculated field - "Index" by keying in the formula shown on the right.| ![](images/3.3.3.png){width=100%}|
+| 4. | **Create parameter - Number of Columns** <br><br> On Data panel, right click on empty space and select "Create Parameter..."<br><br>On Edit Parameter screen, change the name and key in Current value of 2| ![](images/3.3.4.png){width="310"}<br><br>![](images/3.3.4(1).png){width="300"}|
+| 5. | **Create calculated field - Columns** <br><br> Under Analysis, click "Create Calculated Field", create a calculated field - "Columns" by keying in the formula shown on the right.<br><br>Once the calculated field "Columns" is created, right click on it on the Data panel, and select "Convert to Discrete"| ![](images/3.3.5.png){width=100%}<br><br>![](images/3.3.5(1).png){width="320"}|
+| 6. | **Build trellis display** <br><br> 1. Drag "Columns" to Columns and drag "Region" to Rows<br><br> 2. Drag "Planning Area" to Detail<br><br> 3. Right click on "Planning Area" under Detail and select compute using "Planning Area"| ![](images/3.3.6.png){width=100%}<br><br>![](images/3.3.6(1).png){width=100%}|
+| 7. | **Edit X-Axis of "Females"** <br><br> 1. Right click "Females" on X-axis and select "Edit Axis".<br><br> 2. Select "Fixed" under range and set Fixed start to 0 and Fixed end to 14000. Check "Reversed" under Scale.<br><br> 3. Navigate to "Tick Marks", set Major Tick Marks to "Fixed" and set Tick interval to 2000.| ![](images/3.3.7.png){width=100%}<br>![](images/3.3.7(1).png){width=100%}<br><br>![](images/3.3.7(2).png){width=100%}|
+| 8. | **Edit X-Axis of "Males"** <br><br> Right click "Males" on X-axis and select "Edit Axis".<br><br> 1. Select "Fixed" under range and set Fixed start to 0 and Fixed end to 14000. <br><br> 2. Navigate to "Tick Marks", set Major Tick Marks to "Fixed" and set Tick interval to 2000.| ![](images/3.3.8.png){width=100%}<br><br>![](images/3.3.8(1).png){width=100%}|
 | 9. | **Change fill and border colors** <br><br> Click on color, select red fill and border line for "Females" and blue for "Males" for more intuitive visualization.| ![](images/3.3.9F.png){width="300"}|
-| 10. | **Sort the charts by resident counts** <br><br> 1. Drag "Resident Count" onto Tooltip<br><br>2. Right click on "Planning Area" under All panel, and select Sort<br><br>3. Select sort by "Field" and set Field Name as "Resident Count"<br><br>4. Click on the triangle icon beside Region under Rows, Select sort by "Field" and set Field Name as "Resident Count"| ![](images/3.3.10.png){width="230"}<br><br>![](images/3.3.10(1).png){width="230"}<br><br>![](images/3.3.10(2).png){width="230"}<br><br>![](images/3.3.10(3).png){width=100%}|
+| 10. | **Sort the charts by resident counts** <br><br> 1. Drag "Resident Count" onto Tooltip<br><br>2. Right click on "Planning Area" under "All" panel, and select Sort<br><br>3. Select sort by "Field" and set Field Name as "Resident Count"<br><br>4. Click on the triangle icon beside Region under Rows, Select sort by "Field" and set Field Name as "Resident Count"| ![](images/3.3.10.png){width="213"}![](images/3.3.10(1).png){width="225"}<br><br>![](images/3.3.10(2).png){width="230"}<br><br>![](images/3.3.10(3).png){width=100%}|
 
 #### [3.4 Creating calculated fields for additional insights]{style="color: Navy;"}
 Step | Description | Screenshot  
@@ -57,18 +58,51 @@ Step | Description | Screenshot
 | 1. | **Create calculated field - Female-to-Male Ratio** <br><br> Under Analysis, click "Create Calculated Field" to create a calculated field - "Female-to-Male Ratio" by keying in the formula shown on the right.| ![](images/3.4.1.png){width=100%}<br>|
 | 2. | **Group type of dwelling into public, private and others** <br><br>1. Right click on Type of Dwelling, select "Create" and the "Group"<br><br> 2. Select the respective dwelling types and click Group, once all the 3 groups have been formed, click "Apply".| ![](images/3.4.2.png){width=100%}<br><br>![](images/3.4.2(1).png){width=100%}|
 | 3. | **Create calculated field - Public/Private Ratio** <br><br>Under Analysis, click "Create Calculated Field" to create a calculated field - "Public/Private Ratio" by keying in the formula shown on the right.| ![](images/3.4.3.png){width=100%}|
-| 4. | **Create calculated field - Top Age Group** <br><br>Under Analysis, click "Create Calculated Field" to create 2 calculated fields - "TopAgeGroup-Female" and "TopAgeGroup-Male" by keying in the formula shown on the right.| ![](images/3.4.4.png){width=100%}<br><br>![](images/3.4.4(1).png){width=100%}|
+| 4. | **Create calculated field - Top Age Group** <br><br>Under Analysis, click "Create Calculated Field" to create 2 calculated fields - "TopAgeGroup-Female" and "TopAgeGroup-Male" by keying in the formula shown on the right.| ![](images/3.4.4.png){width=100%}|
 | 5. | **Create calculated field - Window Resident Count** <br><br>Under Analysis, click "Create Calculated Field" to create a calculated field - "Window Resident Count" by keying in the formula shown on the right.| ![](images/3.4.5.png){width=100%}|
 
-#### [3.5 Labelling the charts]{style="color: Navy;"}
+#### [3.5 Adding labels and tooltips]{style="color: Navy;"}
 Step | Description | Screenshot  
 |:-:|------------|:------------------:|
-| 1. | **Create AVG(1)** <br><br>Type AVG(1) into columns.| ![](images/3.5.1.png){width=100%}|
+| 1. | **Create AVG(1)** <br><br>Type AVG(1) into Columns.| ![](images/3.5.1.png){width=100%}|
 | 2. | **Change chart type and color opacity** <br><br>Click on the dropdown button beside "Bar" and select "Line". Then click on Color and adjust opacity to 0%.| ![](images/3.5.2.png){width=100%}|
-| 3. | **Adding Labels** <br><br>1. Drag "Planning Area", "Maturity", "Window Resident Count", "Female-to-Male ratio" and "public/private ratio" onto Label<br><br>2. Right click on "Maturity" and select "Attribute"| ![](images/3.5.3.png){width="230"}<br><br>![](images/3.5.3(2).png){width="260"}|
-| 4. | **Edit Label** <br><br>Type AVG(1) into columns.| ![](images/3.5.4.png){width=100%}<br><br>![](images/3.5.4(1).png){width=100%}|
-#### [3.6]{style="color: Navy;"}
+| 3. | **Adding labels** <br><br>1. Drag "Planning Area", "Maturity", "Window Resident Count", "Female-to-Male ratio" and "public/private ratio" onto Label<br><br>2. Right click on "Maturity" and select "Attribute"| ![](images/3.5.3.png){width="215"}![](images/3.5.3(2).png){width="215"}|
+| 4. | **Edit label** <br><br>1. Click on "Label" and click ![](images/dot.png){width="24"}<br><br>2. Edit Label according to the screenshot on the right.| ![](images/3.5.4.png){width="430}<br><br>![](images/3.5.4(1).png){width=100%}|
+| 5. | **Edit tooltip for AVG(1)** <br><br>1. Click on Tooltip and edit tooltip according to the screenshot on the right.|![](images/3.5.5.png){width=100%}|
+| 6. | **Edit X-Axis for AVG(1)** <br><br>Right click on AVG(1) on the X-axis<br><br>1. Select "Uniform axis range for all rows or columns", check "Reversed" under Scale, and remove the axis title.<br><br>2. Navigate to "Tick Marks", select "None" under Major Tick Marks| ![](images/3.5.6.png){width=100%}<br><br>![](images/3.5.6(1).png){width=100%}|
+| 7. | **Add labels for "Males" (Max)** <br><br>1. Drag Resident count onto Label under SUM(Males), click the dropdown and select "Add Table Calculation"<br><br>2. Select "Percent of Total as Calculation Type and compute using "Pane (down)"<br><br>3. Click on Label and check "Show mark labels, select "Min/Max" and uncheck "Label minimum value"|![](images/3.5.7.png){width="210"}![](images/3.5.7(1).png){width="225"}<br><br>![](images/3.5.7(2).png){width="225"}|
+| 8. | **Add labels for "Females" (selected)** <br><br>1. Drag "Females", "Males" and "Resident Count" onto Label under SUM(Females), click the dropdown and select "Add table calculation"<br><br>2. Select "Percent of Total as Calculation Type and compute using "Pane (down)"<br><br>3. Click on Label and check "Show mark labels and select "Selected"|![](images/3.5.8.png){width="200"}![](images/3.5.8(1).png){width="220"}<br><br>![](images/3.5.8(2).png){width="280"}|
+| 9. | **Highlight the top age group in each planning area** <br><br>Drag "TopAgeGroup-Female" to color under SUM(Females) and drag "TopAgeGroup-Male" to color under SUM(Males)| ![](images/3.5.9.png){width="400"}<br><br>![](images/3.5.9(1).png){width=100%}|
+| 10. | **Adjust tooltips for SUM(Females) and SUM(Males)** <br><br>Drag "Females", "Males", "Female-to-Male ratio" and "Maturity" onto tooltip under both SUM(Females) and SUM(Males). Edit the tooltip as shown on the right.|![](images/3.5.10.png){width=100%}|
 
-## **4. Key Insights**
+#### [3.6 Formatting]{style="color: Navy;"}
+Step | Description | Screenshot  
+|:-:|------------|:------------------:|
+| 1. | **Change sheet name** <br><br>Double click on sheet name to rename, type in "Trellis: Age-Sex Pyramids".| ![](images/3.6.1.png){width=100%}|
+| 2. | **Hide field labels for Columns** <br><br>Right click on "Columns" and select "Hide Field Labels for Columns".| ![](images/3.6.2.png){width=100%}|
+| 3. | **Hide header** <br><br>Right click on "1" or "2" at the column header and deselect "Show Header".| ![](images/3.6.3.png){width=100%}|
+| 4. | **Format column shading and fonts** <br><br>Right click on column/row header, select "Format" and edit the shading, font size, and bold the header font.| ![](images/3.6.4(1).png){width="190"}![](images/3.6.4.png){width="220"}|
+| 5. | **Annotate** <br><br>Right click on the empty area on the chart, select "Annotate" and "Area", type in the text shown on the right and adjust the size of the box to fit the empty area.| ![](images/3.6.5.png){width=100%}<br><br>![](images/3.6.5(1).png){width=100%}|
+
+#### [3.7 Dashboarding]{style="color: Navy;"}
+Step | Description | Screenshot  
+|:-:|------------|:------------------:|
+| 1. | **Add new dashboard** <br><br>Click on ![](images/dashboard.png){width="24"} at the bottom of the page to create a new dashboard. Drag "Trellis: Age-Sex Pyramid" sheet from the Dashboard panel onto the space in the right.<br><br> Under Size, select "Automatic"| ![](images/3.7.1.png){width=100%}|
+| 2. | **Edit title** <br><br>Double click on the title to edit the title to "Trellis Display: Age-Sex Pyramids of 9 planning areas located in 5  regions in Singapore in 2022"| ![](images/3.7.2.png){width=100%}|
+| 3. | **Add descriptive text** <br><br>Drag "Text" from the Objects panel onto the charts. Adjust the height of the text box, double click on the text box to key in the text as shown on the right.| ![](images/3.7.3.png){width=100%}<br><br>![](images/3.7.4.png){width=100%}|
+
+#### [3.8 Publishing to Tableau Public]{style="color: Navy;"}
+Step | Description | Screenshot  
+|:-:|------------|:------------------:|
+| 1. | **Extract Data** <br><br>Under Data, select "Extract Data" and save the .hyper file.|![](images/3.8.1.png){width=100%}|
+| 2. | **Publish to Tableau Public** <br><br>Under Server, select "Tableau Public" and "Save to Tableau Public".|![](images/3.8.2.png){width=100%}|
+
+## **4. Trellis Display: Age-Sex Pyramids**
+![](images/Final Visualization.png){width=100%}
+
+The interactive visualization can now be viewed on [Tableau Public](https://isss608-shiangrou.netlify.app/take_home_exercise/take_home_exercise_1/take_home_exercise_1).
+
+
+## **5. Key Insights**
 
 1.  Sengkang - has
