--- a/Hands-on_exercise/Hands-on_EX02/Hands-on_EX02.qmd
+++ b/Hands-on_exercise/Hands-on_EX02/Hands-on_EX02.qmd
@@ -1,6 +1,7 @@
 ---
 title: "Hands-on Exercise 2: Creating Elegant Graphics with ggplot2"
 author: "Law Shiang Rou"
+date: "`r Sys.Date()`"
 ---
 
 Test
