--- a/Take_Home_Exercise/Take_Home_Exercise_1/Take_Home_Exercise_1.qmd
+++ b/Take_Home_Exercise/Take_Home_Exercise_1/Take_Home_Exercise_1.qmd
@@ -8,7 +8,7 @@ date: "`r Sys.Date()`"
 
 In this take-home exercise, we will explore using age-sex pyramids to showcase the age and gender composition of Singapore population in nine selected planning areas on single view using trellis display.
 
-<u>**Selection of planning areas:**</u><br>
+<u>**Selection of planning areas**</u><br>
 In each of the 5 regions, we select 1 largest mature and 1 largest non-mature planning areas, based on number of residents. In East and North regions, only mature or non-mature estates are available, hence, 2 planning areas of the same maturity are selected in these 2 regions. 
 
 ## **2. Dataset**
@@ -108,26 +108,26 @@ Step | Description | Screenshot
 The interactive visualization can now be viewed on [Tableau Public](https://public.tableau.com/views/TakeHomeExercise1-20Jan2023/Dashboard1?:language=en-US&:display_count=n&:origin=viz_share_link). 
 
 ## **5. Key Observations**
-**1. Population size varies greatly across planning areas (PA), outer edges of Singapore more populated.**
+**1. Population size varies greatly across planning areas (PA), outer edges of Singapore more populated.**<br>
 From the trellis display, we observed that Bedok, Tampines, Jurong West, Sengkang, Woodlands and Yishun are significantly more populous than the other 3 PAs. We have mapped out the locations as shown below and observed that the more populous PAs are all located at outer edges of Singapore, and the 3 less populous PAs are either located near to or in Central Region.<br><br>
 ![Singapore map with 9 selected planning areas](images/Map location.png){width="700"}
 <br><br>
-**2. Mature estates have larger proportion of aged residents.**
-The 3 mature PAs - Bukit Merah, AngMoKio and Clementi have 16.5%, 16.1% and 14.6% of their residents above 70 years old respectively. These proportions are much higher as compared to the 4 non-mature PAs (Woodlands, Yishun, Sengkang, Jurong West), with only 6.51% to 8.69% of their residents age above 70. This observation is consistent with the PA's maturity. As mature PAs have been around for longer (>20 years), it's logical to have composition of older residents.
+**2. Mature estates have larger proportion of aged residents.**<br>
+The 3 mature PAs - Bukit Merah, AngMoKio and Clementi have 16.5%, 16.1% and 14.6% of their residents above 70 years old respectively. These proportions are much higher as compared to the 4 non-mature PAs (Woodlands, Yishun, Sengkang, Jurong West), with only 6.51% to 8.69% of their residents age above 70. This observation is consistent with the PA's maturity. As mature PAs have been around for longer (>20 years), it's logical to have composition of older residents.<br><br>
 Although the 2 mature PAs in East Region (Bedok, Tampines) have slightly lower proportion of residents above 70, at 13.75% and 9.58% respectively, their proportion of residents above 60 is at a similar level to that of Bukit Merah, AngMoKio and Clementi.
 
-**3. In the same region, non-mature PAs are more populated than mature PAs.**
+**3. In the same region, non-mature PAs are more populated than mature PAs.**<br>
 For regions with both mature and non-mature PAs, the biggest non-mature PA in the region has significantly more residents than the biggest mature PA in the same region. This is observed from both West and North-East Region. The biggest non-mature PA in West Region, Jurong West is 1.75x more populous than Clementi, the biggest mature PA in the West. Also, Sengkang, the biggest non-mature PA in North-East Region has 57% more residents than the biggest mature PA in North-East, Ang Mo Kio.
 
-**4. High proportion of young families in Yishun, Woodlands, Sengkang and Tampines**
+**4. High proportion of young families in Yishun, Woodlands, Sengkang and Tampines.**<br>
 As evident from the trellis chart, these 4 PAs seem to be preferred by younger residents in their 20s and 30s. Besides, these PAs also have higher proportion of children under 10, as compared to other selected PAs. This indicates a pool of relatively younger families residing in these 4 PAs.
 
-**5. Shift in age distribution after age 70, with Females-to-Males ratio peaks after age 90 across all PAs.**
+**5. Shift in age distribution after age 70, with Females-to-Males ratio peaks after age 90 across all PAs.**<br>
 The line charts show that female-to-male ratio follows a constant uptrend after age 70, with female population more than double the male population at age 90 onward. This is unsurprising as [statistics](https://www.singstat.gov.sg/find-data/search-by-theme/population/death-and-life-expectancy/latest-data) have shown that females have longer average life expectancy than males in Singapore. Additionally, a small bulge is also observed on the female-to-male ratio at age 30s to 40s, and the reason behind this  bulge might be worth investigating.
 
-**6. Bedok has highest proportion of private housing, while Woodlands has highest proportion of HDB dwellers.**
+**6. Bedok has highest proportion of private housing, while Woodlands has highest proportion of HDB dwellers.**<br>
 In 2022, approximately 20% of residents resided in private housing in Singapore. Given this [statistic](https://www.singstat.gov.sg/-/media/files/publications/population/population2022.ashx), Bedok seems to be more prestige as 36.7% of residents here resided in private housing. Of all the private housing residents in Singapore, 11.3% of them reside in Bedok. Woodlands, on the other hand, has 92.3% of its residents residing in public housing. 
 
-**Conclusion:**
+## **6. Future Work**
 The above observations are extracted based on only 9 selected PAs, we can expand this study to all 55 PAs to find out if some of the observations persist.
 
